# iceoryx2

./: CMakeLists.txt  Cargo.toml  README.md  todo.md  trigger-cleanup-race-with-backpressure.sh  trigger-cleanup-race-with-domain.sh  trigger-cleanup-race.sh
.github/workflows/: build-test.yml  nightly.yml
config/: README.md
doc/cross-compile/: linux-arm.md
doc/development-setup/: android.md  qnx.md  vxworks.md
doc/release-notes/: iceoryx2-unreleased.md
examples/: Cargo.toml  README.md
examples/cxx/: CMakeLists.txt
iceoryx2/: Cargo.toml
iceoryx2-bb/concurrency/: Cargo.toml
iceoryx2-bb/container/: Cargo.toml
iceoryx2-bb/cxx/: BUILD.bazel  CMakeLists.txt  iceoryx2-bb-containers-cxx-pretty-printer.py  iceoryx2-bb-containers-cxx.natvis
iceoryx2-bb/derive-macros/: Cargo.toml
iceoryx2-bb/elementary/: Cargo.toml
iceoryx2-bb/elementary/src/: relocatable_ptr.rs
iceoryx2-bb/elementary/tests/: math_tests.rs  nostd_suite.rs
iceoryx2-bb/elementary/tests-common/: Cargo.toml
iceoryx2-bb/elementary/tests-common/src/: scope_guard_tests.rs
iceoryx2-bb/elementary/tests-nostd/src/: alignment_tests.rs  bump_allocator_tests.rs  cyclic_tagger_tests.rs  main.rs  math_tests.rs  package_version_tests.rs  relocatable_ptr_tests.rs  scope_guard_tests.rs  unique_id_tests.rs
iceoryx2-bb/lock-free/: Cargo.toml
iceoryx2-bb/loggers/: Cargo.toml
iceoryx2-bb/memory/: Cargo.toml
iceoryx2-bb/posix/: Cargo.toml
iceoryx2-bb/system-types/: Cargo.toml
iceoryx2-bb/threadsafe/: Cargo.toml
iceoryx2-bb/trait-tests/: Cargo.toml
iceoryx2-c/: CMakeLists.txt
iceoryx2-c/cmake/: install.cmake  rust-ffi-c-byproduct-definitions.cmake
iceoryx2-cal/tests/: shm_allocator_bump_allocator_tests.rs  shm_allocator_pool_allocator_tests.rs  static_storage_file_tests.rs
iceoryx2-cmake-modules/cmake/: iceoryx2-cmake-modulesConfig.cmake
iceoryx2-cmake-modules/modules/: Iceoryx2CommonOptionsAndParams.cmake
iceoryx2-cxx/: CMakeLists.txt
iceoryx2-cxx/cmake/: install.cmake
iceoryx2-pal/testing-macros/: Cargo.toml
iceoryx2-pal/testing-macros/src/: lib.rs
iceoryx2-pal/testing-nostd/: Cargo.toml
iceoryx2-pal/testing-nostd/src/: lib.rs
internal/doc-generator/: .gitignore  Makefile  README.md  pyproject.toml
internal/doc-generator/source/: conf.py  index.rst
internal/doc-generator/source/api/: index.rst
internal/doc-generator/source/fundamentals/: event-communication.md  index.rst  service-oriented-model.md  shared-memory-communication.md
internal/doc-generator/source/how-to/: build-cxx-bindings.md  configure-dynamic-payloads.md  index.rst
internal/doc-generator/source/reference/: index.rst
internal/doc-generator/source/reference/iceoryx2/: waitset.md
internal/doc-generator/source/reference/iceoryx2-cli/: node.md  service.md
internal/doc-generator/source/tutorials/: configuring-event-multiplexing.md  index.rst  utilizing-event-services.md  utilizing-publish-subscribe-services.md
(+297 files in other folders)
