[package]
name = "iceoryx2-bb-elementary"
description = "iceoryx2: [internal] elementary constructs that have (almost) no dependencies at all"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[features]
default = []

std = [
  "iceoryx2-bb-testing/std",
  "iceoryx2-bb-concurrency/std",
  "iceoryx2-pal-testing/std",
  "iceoryx2-pal-testing-macros/std",
  "iceoryx2-pal-testing-nostd/std"
]

[dependencies]
iceoryx2-bb-concurrency = { workspace = true }
iceoryx2-bb-elementary-traits = { workspace = true }

[dev-dependencies]
iceoryx2-bb-memory = { workspace = true }
iceoryx2-bb-testing = { workspace = true }
iceoryx2-pal-testing = { workspace = true }
iceoryx2-pal-testing-macros = { workspace = true }
iceoryx2-pal-testing-nostd = { workspace = true }

generic-tests = { workspace = true }

[[test]]
name = "nostd_suite"
path = "tests/nostd_suite.rs"
harness = false
