[package]
name = "iceoryx2-pal-testing-macros"
description = "iceoryx2: [internal] proc macros for testing"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
iceoryx2-pal-testing-nostd = { workspace = true }

syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
