[package]
name = "iceoryx2-pal-testing-nostd"
description = "iceoryx2: [internal] testing utilities for no_std"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
default = []
std = []

[dependencies]
iceoryx2-pal-print = { workspace = true }

inventory = { workspace = true }
